

                              Bento Cluster Release Notes
Version 1.0.0-rc4
  * CLUSTER-5. bento-cluster will now refuse to start if any configured ports
      are in-use.
  * CLUSTER-10. bento-cluster now informs user of the ports the NameNode,
      JobTracker, and Zookeeper services are available on. User is informed
      both when cluster starts and when cluster is configured.

Version 1.0.0-rc3
  * CLUSTER-4. Allow port configuration utility to be run by the user
      at any time. Use the `bento config` command to do this.
  * CLUSTER-14. Adds RELEASE_NOTES.txt

Version 1.0.0-rc2
  * CLUSTER-11: Dependencies on artifacts such as odiago-common-flags have
      been updated to correctly depend on kiji-common-flags, etc.
  * CLUSTER-8: Fixes bento-env.sh for zsh users.
  * CLUSTER-9: bento-env.sh nows works if invoked via symlinks.
  * CLUSTER-3: Fixes a bug where the bento cluster wouldn't start.
  * CLUSTER-1: Bento cluster will now correctly run webapps for HDFS.

Version 1.0.0-rc1
  * Initial release
