@@ -7,6 +7,8 @@ Version 1.0.0-rc4
   * CLUSTER-10. bento-cluster now informs user of the ports the NameNode,
       JobTracker, and Zookeeper services are available on. User is informed
       both when cluster starts and when cluster is configured.
+  * CLUSTER-7. bento-cluster now checks if there are DNS problems(common to
+      the default configuration on Ubuntu systems) on starting.
 
 Version 1.0.0-rc3
   * CLUSTER-4. Allow port configuration utility to be run by the user
